EnvironmentSimulator/Libraries/esminiLib/esminiLib.hpp

typedef struct
{
    int    id;              
    int    model_id;        
    int    ctrl_type;       
    double timestamp;       
    double x;               
    double y;               
    double z;               
    double h;               
    double p;               
    double r;               
    id_t   roadId;          
    id_t   junctionId;      
    double t;               
    int    laneId;          
    double laneOffset;      
    double s;               
    double speed;           
    double centerOffsetX;   
    double centerOffsetY;   
    double centerOffsetZ;   
    double width;           
    double length;          
    double height;          
    int    objectType;      
    int    objectCategory;  
    double wheel_angle;     
    double wheel_rot;       
    int    visibilityMask;  
} SE_ScenarioObjectState;
typedef struct
{
    double x;  
    double y;  
    double z;  
    double h;  
    double p;  
    double wheel_radius;          
    double friction_coefficient;  
    int axle;   
    int index;  
} SE_WheelData;
typedef struct
{
    double global_pos_x;       
    double global_pos_y;       
    double global_pos_z;       
    double local_pos_x;        
    double local_pos_y;        
    double local_pos_z;        
    double angle;              
    double road_heading;       
    double road_pitch;         
    double road_roll;          
    double trail_heading;      
    double curvature;          
    double speed_limit;        
    id_t   roadId;             
    id_t   junctionId;         
    int    laneId;             
    double laneOffset;         
    double s;                  
    double t;                  
    int    road_type;          
    int    road_rule;          
    int    lane_type;          
    double trail_wheel_angle;  
} SE_RoadInfo;
typedef struct
{
    id_t far_left_lb_id;
    id_t left_lb_id;
    id_t right_lb_id;
    id_t far_right_lb_id;
} SE_LaneBoundaryId;
typedef struct
{
    int            width;
    int            height;
    int            pixelSize;    
    int            pixelFormat;  
    unsigned char *data;
} SE_Image;  
    SE_DLL_API void SE_RegisterParameterDeclarationCallback(void (*fnPtr)(void *), void *user_data);
    SE_DLL_API int SE_ObjectHasGhost(int object_id);
    SE_DLL_API int SE_GetObjectGhostId(int object_id);
    SE_DLL_API int SE_GetObjectGhostState(int object_id, SE_ScenarioObjectState *state);
    SE_DLL_API int SE_GetObjectNumberOfCollisions(int object_id);
    SE_DLL_API int SE_GetObjectCollision(int object_id, int index);
    SE_DLL_API double SE_GetObjectOdometer(int object_id);
    SE_DLL_API int SE_GetObjectVelocityGlobalXYZ(int object_id, double *vel_x, double *vel_y, double *vel_z);
    SE_DLL_API int SE_GetObjectAngularVelocity(int object_id, double *h_rate, double *p_rate, double *r_rate);
    SE_DLL_API int SE_GetObjectAngularAcceleration(int object_id, double *h_acc, double *p_acc, double *r_acc);
    SE_DLL_API double SE_GetObjectAcceleration(int object_id);
    SE_DLL_API int SE_GetObjectAccelerationGlobalXYZ(int object_id, double *acc_x, double *acc_y, double *acc_z);
    SE_DLL_API int SE_GetObjectAccelerationLocalLatLong(int object_id, double *acc_lat, double *acc_long);
    SE_DLL_API int SE_GetObjectNumberOfWheels(int object_id);
    SE_DLL_API int SE_GetObjectWheelData(int object_id, int wheel_index, SE_WheelData *wheeldata);
    SE_DLL_API int SE_GetSpeedUnit();
    SE_DLL_API int SE_GetRoadInfoAtDistance(int          object_id,
                                            double       lookahead_distance,
                                            SE_RoadInfo *data,
                                            int          lookAheadMode,
                                            bool         inRoadDrivingDirection);
    SE_DLL_API int SE_GetRoadInfoAlongRoute(int          object_id,
                                            double       lookahead_distance,
                                            SE_RoadInfo *data,
                                            int          lookAheadMode,
                                            bool         inRoadDrivingDirection);
    SE_DLL_API int SE_GetRoadInfoAlongGhostTrail(int object_id, double lookahead_distance, SE_RoadInfo *data, double *speed_ghost, double *timestamp);
    SE_DLL_API int
    SE_AddObjectSensor(int object_id, double x, double y, double z, double h, double rangeNear, double rangeFar, double fovH, int maxObj);
    SE_DLL_API int SE_GetNumberOfObjectSensors();
    SE_DLL_API int SE_ViewSensorData(int object_id);
    SE_DLL_API int SE_FetchSensorObjectList(int sensor_id, int *list);
    SE_DLL_API void SE_RegisterObjectCallback(int object_id, void (*fnPtr)(SE_ScenarioObjectState *, void *), void *user_data);
    SE_DLL_API void SE_RegisterConditionCallback(void (*fnPtr)(const char *name, double timestamp));
    SE_DLL_API void SE_RegisterStoryBoardElementStateChangeCallback(void (*fnPtr)(const char *name, int type, int state, const char *full_path));
    SE_DLL_API void SE_DisableOSIFile();
    SE_DLL_API void SE_EnableOSIFile(const char *filename);
    SE_DLL_API void SE_FlushOSIFile();
    SE_DLL_API void SE_CropOSIDynamicGroundTruth(int id, double radius);
    SE_DLL_API void SE_ExcludeGhostFromGroundTruth();
    SE_DLL_API int SE_SetOSIFrequency(int frequency);
    SE_DLL_API const char *SE_GetOSISensorDataRaw();
    SE_DLL_API const char *SE_GetOSILaneBoundary(int *size, int g_id);
    SE_DLL_API void SE_GetOSILaneBoundaryIds(int object_id, SE_LaneBoundaryId *ids);
    SE_DLL_API int SE_OSISetTimeStamp(unsigned long long nanoseconds);
    SE_DLL_API void SE_LogMessage(const char *message);
    SE_DLL_API void SE_CloseLogFile();
    SE_DLL_API void SE_RegisterImageCallback(void (*fnPtr)(SE_Image *, void *), void *user_data);