EnvironmentSimulator/Libraries/esminiLib/ESMiniWrapper.cs


        /// <summary>
        /// Gets OSI lane boundary data.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetOSILaneBoundary(ref int size, int g_id);

        /// <summary>
        /// Gets the IDs of lane boundaries surrounding an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_GetOSILaneBoundaryIds(int object_id, ref LaneBoundaryId ids);

        /// <summary>
        /// Excludes the ghost object from OSI GroundTruth.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_ExcludeGhostFromGroundTruth();

        /// <summary>
        /// Sets the frequency of OSI updates.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_SetOSIFrequency(int frequency);

        /// <summary>
        /// Crops the OSI dynamic ground truth to a radius around an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_CropOSIDynamicGroundTruth(int id, double radius);

        /// <summary>
        /// Updates the OSI TrafficCommand.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_UpdateOSITrafficCommand();

        /// <summary>
        /// Gets the raw OSI SensorData pointer.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern IntPtr SE_GetOSISensorDataRaw();

        /// <summary>
        /// Sets the timestamp for OSI messages.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_OSISetTimeStamp(ulong nanoseconds);

        /// <summary>
        /// Logs a message to the esmini log.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_LogMessage(string message);

        /// <summary>
        /// Closes the log file.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_CloseLogFile();

        /// <summary>
        /// Checks if an object has a ghost object associated with it.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_ObjectHasGhost(int object_id);

        /// <summary>
        /// Gets the ID of the ghost object associated with an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectGhostId(int object_id);

        /// <summary>
        /// Gets the state of the ghost object associated with an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectGhostState(int object_id, ref ScenarioObjectState state);

        /// <summary>
        /// Gets the speed unit used in the OpenDRIVE file.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetSpeedUnit();

        /// <summary>
        /// Gets the number of collisions involving an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectNumberOfCollisions(int object_id);

        /// <summary>
        /// Gets the ID of the object involved in a specific collision.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectCollision(int object_id, int index);

        /// <summary>
        /// Gets the odometer value (distance traveled) for an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern double SE_GetObjectOdometer(int object_id);

        /// <summary>
        /// Gets the scalar acceleration of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern double SE_GetObjectAcceleration(int object_id);

        /// <summary>
        /// Gets the global velocity vector (X, Y, Z) of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectVelocityGlobalXYZ(int object_id, out double vel_x, out double vel_y, out double vel_z);

        /// <summary>
        /// Gets the angular velocity (roll, pitch, heading rates) of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectAngularVelocity(int object_id, out double h_rate, out double p_rate, out double r_rate);

        /// <summary>
        /// Gets the angular acceleration of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectAngularAcceleration(int object_id, out double h_acc, out double p_acc, out double r_acc);

        /// <summary>
        /// Gets the global acceleration vector (X, Y, Z) of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectAccelerationGlobalXYZ(int object_id, out double acc_x, out double acc_y, out double acc_z);

        /// <summary>
        /// Gets the local acceleration (lateral, longitudinal) of an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectAccelerationLocalLatLong(int object_id, out double acc_lat, out double acc_long);

        /// <summary>
        /// Gets the number of wheels on a vehicle object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectNumberOfWheels(int object_id);

        /// <summary>
        /// Gets data for a specific wheel of a vehicle.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectWheelData(int object_id, int wheel_index, ref WheelData wheeldata);

        /// <summary>
        /// Gets the states of all objects in the scenario.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetObjectStates(out int nObjects, [In, Out] ScenarioObjectState[] state);

        /// <summary>
        /// Adds a sensor to an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_AddObjectSensor(int object_id, double x, double y, double z, double h, double rangeNear, double rangeFar, double fovH, int maxObj);

        /// <summary>
        /// Gets the total number of object sensors.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetNumberOfObjectSensors();

        /// <summary>
        /// Visualizes sensor data for an object.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_ViewSensorData(int object_id);

        /// <summary>
        /// Disables writing to the OSI file.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_DisableOSIFile();

        /// <summary>
        /// Enables writing to an OSI file.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_EnableOSIFile(string filename);

        /// <summary>
        /// Flushes the OSI file buffer.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern void SE_FlushOSIFile();

        /// <summary>
        /// Fetches the list of objects detected by a sensor.
        /// </summary>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_FetchSensorObjectList(int sensor_id, [In, Out] int[] list);

        /// <summary>
        /// Retrieves information about the road at a specific distance ahead of an object.
        /// </summary>
        /// <param name="object_id">The ID of the object (e.g., vehicle) to query from.</param>
        /// <param name="lookahead_distance">The distance ahead (in meters) to query the road info.</param>
        /// <param name="data">Reference to a RoadInfo struct to be populated with the road information.</param>
        /// <param name="lookAheadMode">Strategy for lookahead: 0 = along road reference line, 1 = along lane center.</param>
        /// <param name="inRoadDrivingDirection">If true, the lookahead is performed in the direction of the lane's traffic flow. If false, it uses the object's heading.</param>
        /// <returns>0 on success, non-zero on failure.</returns>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetRoadInfoAtDistance(int object_id, double lookahead_distance, ref RoadInfo data, int lookAheadMode, [MarshalAs(UnmanagedType.I1)] bool inRoadDrivingDirection);

        /// <summary>
        /// Retrieves information about the road at a specific distance ahead of an object, following the object's assigned route.
        /// </summary>
        /// <param name="object_id">The ID of the object (e.g., vehicle) to query from.</param>
        /// <param name="lookahead_distance">The distance ahead (in meters) to query the road info.</param>
        /// <param name="data">Reference to a RoadInfo struct to be populated with the road information.</param>
        /// <param name="lookAheadMode">Strategy for lookahead: 0 = along road reference line, 1 = along lane center.</param>
        /// <param name="inRoadDrivingDirection">If true, the lookahead is performed in the direction of the lane's traffic flow. If false, it uses the object's heading.</param>
        /// <returns>0 on success, non-zero on failure (e.g., object not found or off-route).</returns>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetRoadInfoAlongRoute(int object_id, double lookahead_distance, ref RoadInfo data, int lookAheadMode, [MarshalAs(UnmanagedType.I1)] bool inRoadDrivingDirection);

        /// <summary>
        /// Gets road information along the ghost object's trail at a lookahead distance.
        /// </summary>
        /// <param name="object_id">The ID of the object.</param>
        /// <param name="lookahead_distance">The distance ahead to query.</param>
        /// <param name="data">Reference to a RoadInfo struct to be populated.</param>
        /// <param name="speed_ghost">Output parameter for the ghost's speed at that point.</param>
        /// <param name="timestamp">Output parameter for the timestamp at that point.</param>
        /// <returns>0 on success, non-zero on failure.</returns>
        [DllImport(LIB_NAME, CallingConvention = CALL_CONV)]
        public static extern int SE_GetRoadInfoAlongGhostTrail(int object_id, double lookahead_distance, ref RoadInfo data, out double speed_ghost, out double timestamp);
